[package]
name = "saferm"
version = "0.1.3"
edition = "2021"
license = "MIT"
authors = ["Aitthi"]
description = "saferm is a simple wrapper around rm that prevents you from accidentally deleting files."
categories = ["command", "bin"]
keywords = ["command", "bin", "rm", "safe"]
repository = "https://github.com/Aitthi/safe-rm"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "saferm"
path = "src/main.rs"

[dependencies]
rand = "0.8.5"